# custom_game_controller

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  custom_game_controller.code-workspace  mappings.json  readme.md  requirements.md  todo.md
examples/: FanatecController.reds  VKBGladiatorController.reds
images/: icons.afdesign
src/custom_game_controller/: custom_game_controller.cpmodproj  custom_refs.txt  layout.xml
src/custom_game_controller/.projectFiles/: fileTreeState.json
src/custom_game_controller/packed/archive/pc/mod/: custom_game_controller.archive
src/custom_game_controller/source/archive/user/jackhumbert/: icons_joystick.inkatlas  icons_joystick.xbm  icons_joystick_1080p.xbm
src/input/: joystick.xml
src/input_loader/: custom_game_controller.xml
src/red4ext/: Addresses.hpp  CMakeLists.txt  FileStream.hpp  ICustomGameController.cpp  ICustomGameController.hpp  IsAxis.cpp  IsAxis.hpp  IsJoystick.cpp  IsJoystick.hpp  IsJoystickAxis.cpp  IsJoystickAxis.hpp  IsJoystickButton.cpp  IsJoystickButton.hpp  IsKey.hpp  IsRelative.hpp  Main.cpp  Signatures.hpp  Utils.cpp  Utils.hpp  XInput.hpp  custom_game_controller.sln  custom_game_controller.vcxproj
src/red4ext/Hooks/: AddMapping.cpp  InitializeXPad.cpp  IsAxis.cpp  IsButtonToAxis.cpp  IsGamepad.cpp  IsKey.cpp  IsRelative.cpp  LoadSupportedInputDevices.cpp  SkipKey.cpp
src/red4ext/Red/: BaseGamepad.hpp  CustomGamepad.hpp  IPad.hpp  Input.cpp  Input.hpp  XPad.hpp
src/red4ext/game/input/: ManagerBackend.hpp  UserMapping.hpp  UserMappingButtonGroup.hpp
src/red4ext/input/: IInputDeviceGamepad.hpp  InputDeviceGamepadPS4Pad.hpp  InputDeviceGamepadXInput.hpp  InputSystemNullInterface.hpp
src/red4ext/input/detail/: Utils.hpp
src/redscript/: FanatecController.reds  ICustomGameController.reds  Module.reds.in  VKBGladiatorController.reds  XboxOneController.reds
src/redscript/custom_game_controller/: CustomGameController.reds  CustomGameController_044F_B10A.reds  CustomGameController_045E_02EA.reds  CustomGameController_231D_0200.reds  ThrustmasterT16000MControllers.reds  VKBGladiatorControllers.reds  XboxOneController.reds
tools/: build.bat
wiki/: Configuration.md
(+1 files in other folders)
